--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">wordleClone</string>
+
+    <!-- GameScreen -->
+    <string name="Accuracy">Accuracy: %d</string>
 </resources>
